fix: ensure min-height is set for main content and add overflow property to positions page

--- a/packages/trader/src/AppV2/Containers/Positions/positions.scss
+++ b/packages/trader/src/AppV2/Containers/Positions/positions.scss
@@ -5,6 +5,7 @@ $TABS_HEIGHT: var(--core-size-2400);
     background-color: var(--semantic-color-slate-solid-surface-frame-mid);
     position: relative;
     padding-bottom: var(--core-spacing-2800);
+    overflow: hidden;
 
     .tab-list--container {
         display: block;
